--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "swiftsync",
-  "version": "0.9.0",
-  "description": "handle server interactions with a focus on managing network instability.",
+  "name": "qbg",
+  "version": "0.9.1",
+  "description": "A versatile JavaScript/TypeScript library for managing server actions in sequence, especially when actions are interdependent. A flexible tool for complex workflows where actions depend on responses from prior actions.",
   "main": "index.js",
   "scripts": {
     "test": "tsc"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kings1ay3r/swiftsync.git"
+    "url": "git+https://github.com/kings1ay3r/bg-q.git"
   },
   "keywords": [
     "patchy",
     "internet",
+    "background",
     "queue",
     "implementation"
   ],
   "author": "kings1ay3r",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/kings1ay3r/swiftsync/issues"
+    "url": "https://github.com/kings1ay3r/bg-q/issues"
   },
-  "homepage": "https://github.com/kings1ay3r/swiftsync#readme",
+  "homepage": "https://github.com/kings1ay3r/bg-q#readme",
   "devDependencies": {
     "@types/node": "^22.7.5",
     "typescript": "^5.6.2"
