--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "qbg",
-  "version": "0.9.1",
+  "version": "0.9.4",
   "description": "A versatile JavaScript/TypeScript library for managing server actions in sequence, especially when actions are interdependent. A flexible tool for complex workflows where actions depend on responses from prior actions.",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "tsc"
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -26,5 +26,8 @@
   "devDependencies": {
     "@types/node": "^22.7.5",
     "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "async-mutex": "^0.5.0"
   }
 }
