refactor: expose listen to move connectivity state chaange resp to consumer
Signed-off-by: Kevin Mathew Sunny <tokevins@protonmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,10 @@
     "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "lib": [
+      "es6"
+    ]
   },
   "include": ["src"]
 }
